# OOP_practice

./: .gitignore  Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  Person.cpp  Person.h  main.cpp
MDI/: CMakeLists.txt  Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  Person.h  doctordialog.cpp  doctordialog.h  doctordialog.ui  doctorlistwindow.cpp  doctorlistwindow.h  doctorlistwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  patientdialog.cpp  patientdialog.h  patientdialog.ui  patientlistwindow.cpp  patientlistwindow.h  patientlistwindow.ui
SDI/: CMakeLists.txt  Doctor.cpp  Patient.cpp  Patient.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
